IE下商会新闻跳转问题

--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -377,6 +377,10 @@ a {
 	margin: 10px 0px;
 }
 
+#querybar .operation{
+	float:right;
+}
+
 #tablecontainer {
 	min-height: 468px;
 	background-color: #fff;
