--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -236,7 +236,6 @@ a {
 	color: #7a7a7a;
 	font-size: 14px;
 	border-radius: 0px;
-	width:250px;
 	display:inline;
 	float:left;
 	margin-left:5px;
@@ -246,6 +245,14 @@ a {
 	-webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, .05);
 	box-shadow: 0 1px 1px rgba(0, 0, 0, .05);
 	border-radius: 0px;
+}
+
+#deptpanels .mypanel {
+	width:250px;
+}
+
+#templatePanels .mypanel {
+	width:320px;
 }
 
 .mypanel>.list-group .list-group-item {
